--- a/Django Projects/Proj1/templates/base.html
+++ b/Django Projects/Proj1/templates/base.html
@@ -48,13 +48,13 @@
         </div>
     </nav>
 
-    {%if message %}
+    {%if messages %}
         {% for message in messages %}   
         <div class="alert alert-{{ message.tags }} alert-dismissible fade show my-0" role="alert">
-        <strong> {{message}} </strong>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+            <strong> {{message}} </strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         {% endfor %}
     {% endif %}
