--- a/Django Projects/UserProject/templates/index.htm
+++ b/Django Projects/UserProject/templates/index.htm
@@ -6,6 +6,6 @@
     <title>Welcome to Technology World</title>
 </head>
 <body>
-    
+    <strong>Welcome <h3>{{request.user}}</h3> ..!! This is Home Page.. You can see this only after Logged In..</strong>
 </body>
 </html>
