--- a/Django Projects/UserProject/templates/logout.htm
+++ b/Django Projects/UserProject/templates/logout.htm
@@ -6,6 +6,6 @@
     <title>Logout</title>
 </head>
 <body>
-    
+    <strong>You Are Logged Out of the Module... Login Again to continue</strong>
 </body>
 </html>
