--- a/Django Projects/UserProject/templates/login.htm
+++ b/Django Projects/UserProject/templates/login.htm
@@ -90,7 +90,7 @@
     <link href="signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    <form class="form-signin" method="POST" action="/" > 
+    <form class="form-signin" method="POST" action="/login/" > 
     {% csrf_token %}
     <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
